# comicarr

./: .dockerignore  .gitignore  AGENTS.md  API_REFERENCE  AUTH_MIGRATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  COMMUNITY_FEATURES.md  CONTRIBUTING.md  Comicarr.py  DAY4_IMPLEMENTATION_SUMMARY.md  Dockerfile  MIGRATION_PLAN.md  PERFORMANCE_IMPROVEMENTS.md  README.md  ascii_logo.nfo  comicarr.pen  config.ini.sample  docker-compose.yml  monitor_performance.sh  pyproject.toml  requirements.txt  view_search_stats.sh
.github/workflows/: ci.yml  claude.yml  deploy-docs.yml  release-please.yml  release.yml  sync-lockfile.yml  test.yml
comicarr/: __init__.py  api.py  auth.py  auth32p.py  cache.py  carepackage.py  cdh_mapping.py  cmtag.py  comicbookdb.py  comicsync.py  config.py  cv.py  cv_cache.py  db.py  dbupdater.py  dependency_check.py  encrypted.py  failed.py  filechecker.py  filers.py  findcomicfeed.py  ftpsshup.py  getcomics.py  getimage.py  helpers.py  importer.py  importinbox.py  kavita.py  latest.py  librarysync.py  locg.py  logger.py  maintenance.py  maintenance_webstart.py  manga_parser.py  mangadex.py  mangasync.py  mb.py  metron.py  migration.py  (+34 more)
comicarr/app/: __init__.py  main.py
comicarr/app/common/: __init__.py  dates.py  filesystem.py  numbers.py  strings.py  utilities.py
comicarr/app/core/: context.py  database.py  events.py  exceptions.py  middleware.py  security.py
comicarr/app/downloads/: __init__.py  queries.py  router.py  service.py
comicarr/app/metadata/: queries.py  router.py  service.py
comicarr/app/opds/: __init__.py  router.py
comicarr/app/search/: __init__.py  jobs.py  queries.py  router.py  service.py
comicarr/app/series/: __init__.py  queries.py  router.py  service.py
comicarr/app/storyarcs/: __init__.py  queries.py  router.py  service.py
comicarr/app/system/: router.py  service.py
comicarr/downloaders/: external_server.py  mediafire.py  mega.py  pixeldrain.py
comicarr/torrent/clients/: deluge.py  qbittorrent.py  rtorrent.py  transmission.py  utorrent.py
comicarr/torrent/helpers/: variable.py
data/interfaces/default/: base.html  config.html  searchresults.html
docker/: entrypoint.sh
docs/: COMMUNITY_FEATURES.md  PERFORMANCE_IMPROVEMENTS.md  RELEASE_PLAN.md
docs/ideation/: 2026-03-24-open-ideation.md
docs/plans/: 2026-03-21-001-refactor-mylar-rebrand-architecture-audit-plan.md  2026-03-21-002-feat-public-release-preparation-plan.md  2026-03-23-001-fix-missing-db-rawdb-attribute-plan.md
docs/solutions/ui-bugs/: metron-search-broken-cover-images.md
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: mock-sw.js
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.jsx  ErrorBoundary.tsx  ProtectedRoute.tsx  StatusBadge.tsx  ThemeToggle.jsx  ThemeToggle.tsx
frontend/src/components/custom/: date-picker-with-range.tsx  sheet.tsx  sortable.tsx
frontend/src/components/dashboard/: RecentDownloads.tsx
frontend/src/components/data-table/: DataTable.tsx  DataTableServerPagination.tsx  DataTableSortHeader.tsx  data-table-auto.tsx  data-table-column-header.tsx  data-table-infinite.tsx  data-table-provider.tsx  data-table-toolbar.tsx
frontend/src/components/import/: ConfidenceBadge.tsx  ImportBulkActions.tsx  ImportInboxSection.tsx  ImportTable.tsx  LibraryScanResults.tsx  LibraryScanSection.tsx  MatchModal.tsx
frontend/src/components/layout/: AppSidebar.jsx  AppSidebar.tsx  Layout.jsx  Layout.tsx  PageHeader.tsx
frontend/src/components/login/: GridShader.tsx
frontend/src/components/onboarding/: OnboardingDialog.tsx
frontend/src/components/queue/: BulkActionBar.tsx  FilterBar.tsx  UpcomingTable.jsx  UpcomingTable.tsx  WantedTable.jsx  WantedTable.tsx
frontend/src/components/search/: ComicCard.jsx  ComicCard.tsx  SearchResultsTable.tsx
frontend/src/components/series/: IssuesTable.jsx  IssuesTable.tsx  (+5 more)
frontend/src/contexts/: AuthContext.jsx  AuthContext.tsx  ThemeContext.jsx  ThemeContext.tsx
frontend/src/hooks/: useActivity.ts  useArcSearch.ts  useConfig.js  useConfig.ts  useContentSources.ts  useImport.ts  useKeyboardShortcuts.js  useKeyboardShortcuts.ts  useMetadata.ts  useMigration.ts  useQueue.ts  useSearch.js  useSearch.ts  useSeries.ts  useServerEvents.js  useServerEvents.ts  useStoryArcs.ts  useUnifiedSearch.ts
frontend/src/lib/: api.js  api.ts  mockData.ts  series-utils.ts
frontend/src/pages/: ActivityPage.tsx  DashboardPage.tsx  HomePage.jsx  HomePage.tsx  ImportPage.tsx  LoginPage.jsx  LoginPage.tsx  ReleasesPage.tsx  SearchPage.jsx  SearchPage.tsx  SeriesDetailPage.jsx  SeriesDetailPage.tsx  SeriesListPage.tsx  SettingsPage.jsx  SettingsPage.tsx  StoryArcsPage.tsx  UpcomingPage.jsx  UpcomingPage.tsx  WantedPage.jsx  WantedPage.tsx
frontend/src/types/: api.ts  auth.ts  components.ts  config.ts  entities.ts  events.ts  index.ts
frontend/tests/mocks/: handlers.ts
frontend/tests/pages/: DashboardPage.test.tsx
lib/comictaggerlib/comicapi/: comicarchive.py
lib/rtorrent/: __init__.py  torrent.py
lib/rtorrent/rpc/: __init__.py
mylar/: PostProcessor.py  __init__.py  api.py  auth.py  cmtagmylar.py  config.py  filechecker.py  helpers.py  importer.py  maintenance_webstart.py  mangadex.py  mb.py  metron.py  notifiers.py  rsscheck.py  search.py  versioncheck.py  webserve.py  webstart.py
tests/: __init__.py  conftest.py
tests/factories/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_app_core.py  test_cdh_mapping.py  test_comicsync.py  test_download_restore.py  test_failed_processor.py  test_helpers.py  test_importinbox.py  test_manga_postprocessor.py  test_manga_search.py  test_mangadex_chapters.py  test_mangasync.py  test_metadata_domain.py  test_search_filer.py  test_search_jobs.py  test_search_queue_worker.py  test_system_domain.py
tests/unit/notifiers/: __init__.py  conftest.py  test_discord.py  test_email.py  test_gotify.py  test_matrix.py  test_mattermost.py  test_prowl.py  test_pushbullet.py  test_pushover.py  test_slack.py  test_telegram.py
(+48 files in other folders)
