[project]
name = "comicarr"
version = "0.1.0"
description = "Automated Comic Book Manager"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "APScheduler>=3.6.3",
    "beautifulsoup4>=4.8.2",
    "cfscrape>=2.0.8",
    "cheroot>=8.2.1",
    "CherryPy>=18.5.0",

    "feedparser>=5.2.1",
    "Mako>=1.1.0",
    "mokkari>=3.0.0",
    "natsort>=3.5.2",
    "packaging>=22.0",
    "Pillow>=10.1",
    "portend>=2.6",
    "pycryptodome>=3.19.0",
    "pystun>=0.1.0",
    "pytz>=2019.3",
    "rarfile>=4.0",
    "requests[socks]>=2.22.0",
    "simplejson>=3.17.0",

    "tenacity>=8.2.3",
    "tzlocal>=2.0.0",
    "urllib3<2",
    "user_agent2>=2021.12.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "freezegun>=1.4.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.100.0",
]

[tool.setuptools.packages.find]
include = ["comicarr*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["comicarr"]
omit = [
    "comicarr/test.py",
    "comicarr/req_test.py",
    "lib/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.coverage.html]
directory = "coverage_html"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]
